# commit-gen

./: .coverage  .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/commitgen/: ai.py  cli.py  git_utils.py
src/commitgen.egg-info/: PKG-INFO  SOURCES.txt
src/tests/: test_ai.py  test_cli.py  test_config.py  test_git_utils.py
