[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
license = { text = "MIT" }
name = "commitgen-tool"
version = "0.1.3"
description = "AI-powered Conventional Commit message generator for Git using OpenAI"
readme = { file = "README.md", content_type = "text/markdown" }
requires-python = ">=3.10"
dependencies = [
    "typer",
    "python-dotenv",
    "openai",
]

[project.scripts]
commitgen = "commitgen.cli:app"
